--- a/about.html
+++ b/about.html
@@ -4,9 +4,14 @@
         <link rel="stylesheet" href="style.ccs">
     </head>
     <body>
+        <div id="menu">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact Us</a>
         <h2>About Us</h2>
         <p>We are an App develoment company based in Cape Town South Africa.</p>
         <p>We take pride in creating amazing apps!</p>
+        <p>Let us know what you think about this app in the contact page :)!</p>
         
     </body>
 </html>
